# vibeproxy-win-rs

./: .gitignore  AGENTS.md  README.md  index.html  package.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release-tauri.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TROUBLESHOOTING.md
scripts/: release.mjs  sync-cli-proxy-binary.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_manager.rs  binary_manager.rs  commands.rs  config_manager.rs  factory_settings.rs  lib.rs  main.rs  managed_key.rs  secure_store.rs  server_manager.rs  settings.rs  thinking_proxy.rs  tray.rs  types.rs  usage_tracker.rs
src/components/: AccountRow.tsx  AgentModelInstallDialog.tsx  AgentsTab.tsx  Footer.tsx  ModelsTab.tsx  QwenEmailDialog.tsx  ServerStatus.tsx  ServiceRow.tsx  SettingsView.tsx  UsageDashboard.css  UsageDashboard.tsx  VercelGatewayControls.tsx  ZaiApiKeyDialog.tsx
src/hooks/: useAuthAccounts.ts  useServerState.ts  useSettings.ts  useUpdater.ts  useUsageDashboard.ts
src/types/: index.ts
src/utils/: error.ts
