[package]
name = "vibeproxy-win"
version = "0.1.6"
description = "VibeProxy - OAuth authentication proxy and unified AI model router"
authors = ["you"]
edition = "2021"

[[bin]]
name = "VibeProxy"
path = "src/main.rs"

[lib]
name = "vibeproxy_win_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"] }
notify = "7"
notify-debouncer-mini = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
arboard = "3"
futures-util = "0.3"
open = "5"
zip = "2"
tar = "0.4"
flate2 = "1"
base64 = "0.22"
sha2 = "0.10"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
